[package]
name = "lpc178x_7x-hal"
version = "0.1.0"
authors = ["cf <abtjh5q@hmamail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lpc178x_7x = { git = "https://github.com/fuchsch1234/lpc178x_7x", branch = "master" }
embedded-hal = "1.0.0-alpha.1"
nb = "1.0.0"

[dev-dependencies]
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
panic-halt = "0.2"
